# site-gen

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yaml
src/: main.rs
