[package]
name = "site-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2"
clap = { version = "3.1.10", features = ["derive"] }
anyhow = { version = "1.0" }
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = [ "derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
extract-frontmatter = "4.1"
markdown = { git = "https://github.com/johannhof/markdown.rs", branch = "master" }
chrono = "0.4"
regex = "1.5"
